# wechat-agent

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/wechat_agent/: SysEnum.py  __about__.py  __init__.py  constants.py  logger_config.py  main.py  msgs.txt  nav.json  receive.py  send.py
src/wechat_agent/controller/: agent_controller.py  ai_role_controller.py  auth_controller.py  base_controller.py  history_controller.py  main.py  model_controller.py  reply_controller.py  wechat_agent_controller.py
src/wechat_agent/domain/: ajax_result.py
src/wechat_agent/service/: captcha_util.py  db_util.py  jwt_util.py  langchain_util.py  md5_util.py  receive.py  systemInfo_util.py  wx_util.py  wxauto3_util.py  wxauto4_util.py
ui/: .eslintrc.js  LICENSE  package.json  vue.config.js
ui/public/: index.html
ui/src/: App.vue  main.js
ui/src/apis/: home.js  login.js  register.js  setting.js  watch.js
ui/src/apis/agent/: agent.js
ui/src/apis/aiRole/: aiRole.js
ui/src/apis/history/: history.js
ui/src/apis/model/: model.js
ui/src/apis/reply/: reply.js
ui/src/assets/css/: global.css
ui/src/assets/iconfont/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
ui/src/common/: common.js  request.js
ui/src/components/: CodeHighlight.vue  ImageViewer.vue  MessageBoard.vue
ui/src/plugins/: element.js
ui/src/router/: index.js
ui/src/store/: index.js
ui/src/views/: home.vue  index.vue  login.vue  register.vue  setting.vue  watch.vue
ui/src/views/agent/: agent.vue  index.vue
ui/src/views/aiRole/: index.vue
ui/src/views/history/: index.vue
ui/src/views/model/: index.vue
ui/src/views/reply/: index.vue
wechat_agent/: SysEnum.py  __about__.py  conf.py  logger_config.py  main.py
wechat_agent/controller/: ai_role_controller.py  auth_controller.py  base_controller.py  model_controller.py  reply_controller.py  service_error.py
wechat_agent/domain/: ajax_result.py
wechat_agent/service/: common_util.py  langchain_util.py  receive.py  send.py
