[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wechat-agent"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
    { name = "jerry", email = "826935261@qq.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "wxauto~=39.1.16",
    "wxauto4~=40.1.1",
    "langchain~=0.3.27",
    "langchain-community~=0.3.27",
    "langchain-text-splitters~=0.3.11",
    "langchain-core~=0.3.76",
    "langchain-experimental~=0.3.4",
    "langchain-community~=0.3.21",
    "langchain-openai~=0.3.16",
    "langchain-ollama~=0.3.8",
    "openai~=1.108.0",
    "flask~=3.1.2",
    "pyjwt~=2.10.1",
    "GPUtil~=1.4.0",
    "wmi~=1.5.1",
    "waitress~=3.0.2"
]

[project.urls]
Documentation = "https://gitee.com/zjwan461/wechat-agent#readme"
Issues = "https://gitee.com/zjwan461/wechat-agent/issues"
Source = "https://gitee.com/zjwan461/wechat-agent"

[project.scripts]
wechat-agent = "wechat_agent.main:main"

[tool.hatch.version]
path = "wechat_agent/__about__.py"

[tool.hatch.build]
include = ["wechat_agent/**/*"]

[tool.hatch.publish]
repo = { pypi = { } }